--- a/desktop-themes/ClassicOk/ctk-3.0/other-applications.css
+++ b/desktop-themes/ClassicOk/ctk-3.0/other-applications.css
@@ -93,10 +93,10 @@ window.background > box.vertical > notebook overlay > scrolledwindow viewport {
  ***********/
 
 /* 2.0 */
-.lightdm-gtk-greeter #login_window.background,
+.lightdm-ctk-greeter #login_window.background,
 /* 1.8.5 */
-#login_window.background.lightdm-gtk-greeter,
-#login_window.background.lightdm-gtk-greeter box.vertical {
+#login_window.background.lightdm-ctk-greeter,
+#login_window.background.lightdm-ctk-greeter box.vertical {
 	border-radius: 6px;
     border-style: solid;
     border-width: 1px;
@@ -104,20 +104,20 @@ window.background > box.vertical > notebook overlay > scrolledwindow viewport {
 }
 
 /* 2.0 */
-.lightdm-gtk-greeter #login_window.background #user_image_border,
+.lightdm-ctk-greeter #login_window.background #user_image_border,
 /* 1.8.5 */
-#login_window.background.lightdm-gtk-greeter #user_image_border {
+#login_window.background.lightdm-ctk-greeter #user_image_border {
     border-style: solid;
     border-width: 1px;
     border-color: shade(@theme_bg_color, 0.8);
 }
 
 /* 2.0 */
-.lightdm-gtk-greeter #panel_window.background,
-.lightdm-gtk-greeter #panel_window.background menubar separator,
+.lightdm-ctk-greeter #panel_window.background,
+.lightdm-ctk-greeter #panel_window.background menubar separator,
 /* 1.8.5 */
-#panel_window.background.lightdm-gtk-greeter,
-#panel_window.background.lightdm-gtk-greeter menubar separator {
+#panel_window.background.lightdm-ctk-greeter,
+#panel_window.background.lightdm-ctk-greeter menubar separator {
     background-color: transparent;
     color: @theme_fg_color;
 }
