--- a/desktop-themes/ClassicOk/gtk-3.0/gtk-widgets.css
+++ b/desktop-themes/ClassicOk/gtk-3.0/gtk-widgets.css
@@ -874,6 +874,10 @@ scrolledwindow.frame {
     padding: 0;
 }
 
+.maximized scrolledwindow.frame {
+    border-right-width: 0px;
+}
+
 #pathbarbox,
 filechooser scrolledwindow,
 scrolledwindow viewport {
