Classic themes: cafe-terminal: scrollbar with border-width 1px

--- a/desktop-themes/ClassicGreen/gtk-3.0/cafe-applications.css
+++ b/desktop-themes/ClassicGreen/gtk-3.0/cafe-applications.css
@@ -612,6 +612,10 @@ window.background.cafe-terminal > box.vertical > notebook > header.top tab:check
     border-width: 1px;
 }
 
+window.background.cafe-terminal > box.vertical > notebook > stack > box > box > scrollbar {
+    border-width: 1px;
+}
+
 /***********************
  * cafe-volume-control *
  ***********************/
