--- a/desktop-themes/ClassicOk/ctk-3.0/cafe-applications.css
+++ b/desktop-themes/ClassicOk/ctk-3.0/cafe-applications.css
@@ -488,6 +488,10 @@ na-tray-applet {
     border-style: solid;
 }
 
+.pluma-window > box.vertical > paned.horizontal > paned.vertical > notebook > stack > box.vertical > scrolledwindow > scrollbar.vertical {
+    border-width: 0px 1px 0px 0px;
+}
+
 /*********
  * Atril *
  *********/
