--- a/desktop-themes/ClassicOk/gtk-3.0/gtk-widgets.css
+++ b/desktop-themes/ClassicOk/gtk-3.0/gtk-widgets.css
@@ -878,6 +878,10 @@ scrolledwindow.frame {
     border-right-width: 0px;
 }
 
+.maximized scrolledwindow scrollbar {
+    border-right-width: 1px;
+}
+
 #pathbarbox,
 filechooser scrolledwindow,
 scrolledwindow viewport {
