--- a/desktop-themes/ClassicOk/ctk-3.0/ctk-widgets.css
+++ b/desktop-themes/ClassicOk/ctk-3.0/ctk-widgets.css
@@ -874,19 +874,11 @@ scrolledwindow.frame {
     padding: 0;
 }
 
-.maximized notebook > stack > box > scrolledwindow  {
-    border-right-width: 1px;
+.maximized overlay > * scrolledwindow  {
+    border-right-width: 0px;
 }
 
-.maximized notebook > stack > scrolledwindow  {
-    border-right-width: 1px;
-}
-
-.maximized paned > box > stack > evsidebarthumbnails > scrolledwindow  {
-    border-right-width: 1px;
-}
-
-.maximized scrolledwindow {
+.maximized overlay > scrolledwindow  {
     border-right-width: 0px;
 }
 
