--- a/desktop-themes/ClassicGreen/ctk-3.0/ctk-widgets-img.css
+++ b/desktop-themes/ClassicGreen/ctk-3.0/ctk-widgets-img.css
@@ -3,7 +3,7 @@
  **********/
 
 /*************
- * GtkSwitch *
+ * CtkSwitch *
  *************/
 
 switch slider {
@@ -210,7 +210,7 @@ radio row:selected:focus:indeterminate:disabled {
 }
 
 /*********************
- * GtkScale's slider *
+ * CtkScale's slider *
  *********************/
  
 scale slider,
